--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
     <jetty.version>9.2.1.v20140609</jetty.version>
     <slf4j.version>1.7.7</slf4j.version>
     <selenium.version>2.47.2</selenium.version>
-    <jackson.version>2.6.2</jackson.version>
+    <jackson.version>2.7.3</jackson.version>
 
     <teavm.test.incremental>false</teavm.test.incremental>
     <teavm.test.threads>1</teavm.test.threads>
@@ -129,12 +129,12 @@
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
-        <version>2.4</version>
+        <version>2.5</version>
       </dependency>
       <dependency>
         <groupId>org.ow2.asm</groupId>
         <artifactId>asm-debug-all</artifactId>
-        <version>5.0.4</version>
+        <version>6.0_ALPHA</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven</groupId>
@@ -159,7 +159,7 @@
       <dependency>
         <groupId>javax.websocket</groupId>
         <artifactId>javax.websocket-api</artifactId>
-        <version>1.0</version>
+        <version>1.1</version>
       </dependency>
       <dependency>
         <groupId>org.eclipse.jetty</groupId>
@@ -205,34 +205,34 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.5.1</version>
+          <version>3.5.1</version>
           <configuration>
             <source>1.8</source>
             <target>1.8</target>
           </configuration>
         </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.9.1</version>
-          <executions>
-            <execution>
-              <id>build-javadoc</id>
-              <goals>
-                <goal>jar</goal>
-              </goals>
-              <phase>post-integration-test</phase>
-            </execution>
-          </executions>
-          <configuration>
-            <show>protected</show>
-            <failOnError>false</failOnError>
-          </configuration>
-        </plugin>
+        <!--<plugin>-->
+          <!--<groupId>org.apache.maven.plugins</groupId>-->
+          <!--<artifactId>maven-javadoc-plugin</artifactId>-->
+          <!--<version>2.10.3</version>-->
+          <!--<executions>-->
+            <!--<execution>-->
+              <!--<id>build-javadoc</id>-->
+              <!--<goals>-->
+                <!--<goal>jar</goal>-->
+              <!--</goals>-->
+              <!--<phase>post-integration-test</phase>-->
+            <!--</execution>-->
+          <!--</executions>-->
+          <!--<configuration>-->
+            <!--<show>protected</show>-->
+            <!--<failOnError>false</failOnError>-->
+          <!--</configuration>-->
+        <!--</plugin>-->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-source-plugin</artifactId>
-          <version>2.2.1</version>
+          <version>3.0.0</version>
           <executions>
             <execution>
               <id>attach-sources</id>
@@ -246,12 +246,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.17</version>
+          <version>2.19.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
-          <version>2.16</version>
+          <version>2.17</version>
           <executions>
             <execution>
               <id>validate</id>
@@ -274,7 +274,7 @@
         <plugin>
           <groupId>org.apache.felix</groupId>
           <artifactId>maven-bundle-plugin</artifactId>
-          <version>2.5.3</version>
+          <version>3.0.1</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -305,7 +305,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
-            <version>1.4</version>
+            <version>1.6</version>
             <executions>
               <execution>
                 <id>sign-artifacts</id>
